[tool.poetry]
name = "divintseg"
version = "0.1.1"
description = "Tools for computing Diversity, Integration and Segregation Metrics"
license = "HL3-CL-ECO-EXTR-FFD-LAW-MIL-SV"
authors = ["vengroff <vengroff@gmail.com>"]
readme = "README.md"
repository = "https://github.com/vengroff/divintseg"
keywords = ["diversity", "integration", "segregation", "demographics"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research"
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.2"
pandas = "^1.4.4"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
coverage = "^6.4.4"
pytest-cov = "^3.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
