[tool.poetry]
name = "divintseg"
version = "0.2.0"
description = "Tools for computing diversity, integration and segregation metrics"
license = "HL3-CL-ECO-EXTR-FFD-LAW-MIL-SV"
authors = ["vengroff <vengroff@gmail.com>"]
readme = "README.md"
repository = "https://github.com/vengroff/divintseg"
keywords = ["diversity", "integration", "segregation", "demographics"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research"
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.2"
pandas = "^1.4.4"
genbadge = {extras = ["all"], version = "^1.1.0"}
sphinx-rtd-theme = { version = "1.0.0", optional = true }
sphinx-copybutton = { version = "^0.5.1", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }
nbsphinx = { version = "^0.8.10", optional = true }

[tool.poetry.group.lint.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"

[tool.poetry.group.dist.dependencies]
genbadge = {extras = ["all"], version = "^1.1.0"}

[tool.coverage.report]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
