[tool.poetry]
name = "divintseg"
version = "0.6.0"
description = "Tools for computing diversity, integration and segregation metrics"
license = "HL3-CL-ECO-EXTR-FFD-LAW-MIL-SV"
authors = ["Darren Vengroff"]
readme = "README.md"
repository = "https://github.com/vengroff/divintseg"
keywords = ["diversity", "integration", "segregation", "demographics"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research"
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
pandas = "^2.1.3"
genbadge = {extras = ["all"], version = "^1.1.1"}
sphinx-rtd-theme = { version = "2.0.0", optional = true }
sphinx-copybutton = { version = "^0.5.1", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }
toml = { version = "^0.10.0", optional = true }
nbsphinx = { version = "^0.9.3", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinx-copybutton", "sphinxcontrib-napoleon", "toml"]

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^3.0.0"
nbmake = "^1.3.5"

[tool.poetry.group.lint.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"

[tool.poetry.group.dist.dependencies]
genbadge = {extras = ["all"], version = "^1.1.0"}

[tool.coverage.report]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
